--- a/musicalChairs/musicalChairs/Base.lproj/Main.storyboard
+++ b/musicalChairs/musicalChairs/Base.lproj/Main.storyboard
@@ -33,7 +33,6 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="playerCountLabel" destination="a6D-j7-Hvm" id="UOr-JA-1dN"/>
                         <segue destination="7zL-sJ-c3E" kind="presentation" identifier="PlayerNameSegue" id="iMs-dl-ZVJ"/>
                     </connections>
                 </viewController>
@@ -55,6 +54,13 @@
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
+                        <label key="backgroundView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Number of Players: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="O2v-GR-kTa">
+                            <rect key="frame" x="0.0" y="-20" width="375" height="667"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MyCell" id="A1g-7D-ldc" customClass="IntroCollectionViewCell" customModule="musicalChairs" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="153" height="123"/>
@@ -87,6 +93,9 @@
                             <outlet property="delegate" destination="jO8-la-Jv6" id="fNu-wZ-Ex0"/>
                         </connections>
                     </collectionView>
+                    <connections>
+                        <outlet property="playerCountLabel" destination="O2v-GR-kTa" id="u2M-A4-Ea6"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eos-NO-aoB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
